Use List.of and Set.of to create fixed collections
Fixed-content lists and sets are created with Arrays.asList,
Collections.singletonList, Collections.emptyList, and
new HashSet<>(...).

The collection factory methods (Java 9) are shorter, uniform across
the empty, single-element, and multi-element cases, and return
unmodifiable collections, which suits these use sites since none of
them mutate the created collection.

Let's replace those calls with List.of and Set.of.

CollectionUtilTest keeps Arrays.asList because its fixtures
deliberately contain null elements, which List.of rejects.
TypicalPersons keeps new ArrayList<>(Arrays.asList(...)) because it
returns a mutable list.

Co-Authored-By: Claude Fable 5 <noreply@anthropic.com>